--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,16 @@ body {
   margin-top: 5rem;
 }
 
+.reportesCompras {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+  width: 60vw;
+  margin: auto;
+  margin-top: 5rem;
+}
+
+
 
 
 /* --------------------------------------------------------------------------------------------------------------------------------------- */
